--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /WebIIExercicio3/dist/
+/WebIIExercicio3 - Copy/build/
+/WebIIExercicio3 - Copy/dist/
+/WebIIExercicio3 - Copy/nbproject/private/
+/WebIIExercicio4/build/
+/WebIIExercicio4/dist/
+/WebIIExercicio4/nbproject/private/
